// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm should render component with apps and categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                In Public AppMarket
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-true"
                >
                  <mock-styled.span>
                    Public
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-false"
                >
                  <mock-styled.span>
                    Private
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Integration or AC Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-true"
                >
                  <mock-styled.span>
                    Integration
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-false"
                >
                  <mock-styled.span>
                    AC App
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Publicly Listed
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-true"
                >
                  <mock-styled.span>
                    Listed
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-false"
                >
                  <mock-styled.span>
                    Development
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Categories
              </mock-styled.label>
              <mock-styled.div>
                <mock-styled.input
                  id="category"
                  name="category"
                />
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="el-ml2 el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <p>
                    Please select from the options below
                  </p>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    string
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Tools
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Social
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Marketing
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Communication
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Media
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Events
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Finance
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Productivity
                  </mock-styled.label>
                  <mock-styled.input
                    id="test-static-id"
                    type="checkbox"
                  />
                  <mock-styled.label
                    classname="el-has-grey-chips"
                    htmlfor="test-static-id"
                  >
                    Other
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.div
        classname="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App or Developer Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Company Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="id"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App Id
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Is Charged Consumption
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-consumption-all"
                name="isChargedConsumption"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-consumption-true"
                name="isChargedConsumption"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-true"
              >
                <mock-styled.span>
                  Charged
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-consumption-false"
                name="isChargedConsumption"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-false"
              >
                <mock-styled.span>
                  Free
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Categories
            </mock-styled.label>
            <mock-styled.div>
              <mock-styled.input
                id="category"
                name="category"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-ml2 el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <p>
                  Please select from the options below
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  string
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Tools
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Social
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Marketing
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Communication
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Media
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Events
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Finance
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Productivity
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  Other
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should render component with no apps or categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                In Public AppMarket
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-true"
                >
                  <mock-styled.span>
                    Public
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-public-false"
                >
                  <mock-styled.span>
                    Private
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Integration or AC Enabled
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-true"
                >
                  <mock-styled.span>
                    Integration
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-integration-false"
                >
                  <mock-styled.span>
                    AC App
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Publicly Listed
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-true"
                >
                  <mock-styled.span>
                    Listed
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-listed-false"
                >
                  <mock-styled.span>
                    Development
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.div
        classname="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App or Developer Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Company Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="id"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App Id
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Is Charged Consumption
            </mock-styled.label>
            <mock-styled.div
              classname="el-has-grey-bg"
            >
              <mock-styled.input
                id="option-consumption-all"
                name="isChargedConsumption"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-consumption-true"
                name="isChargedConsumption"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-true"
              >
                <mock-styled.span>
                  Charged
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-consumption-false"
                name="isChargedConsumption"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="el-has-grey-bg"
                htmlfor="option-consumption-false"
              >
                <mock-styled.span>
                  Free
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
